--- a/package.json
+++ b/package.json
@@ -4,12 +4,17 @@
   "version": "0.1.0",
   "type": "module",
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
     "dev": "vite",
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
     "format": "prettier --write \"src/**/*.{ts,tsx,css,md}\"",
     "lint:fix": "eslint . --ext ts,tsx --fix"
+    "homepage": "https://folo9900.github.io/muvi-mini",
+ 
+
   },
   "dependencies": {
     "@emotion/react": "^11.14.0",
